fix:the spacing between the different cards and make it a consistent spacing system

--- a/src/pages/ValidatorOnboarding/Overview/overviewLayout.module.css
+++ b/src/pages/ValidatorOnboarding/Overview/overviewLayout.module.css
@@ -19,6 +19,6 @@
   }
   .overviewCard {
     width: 35%;
-    margin-bottom: 16px;
+     
   }
 }
